# national-mcp-pai-oncology-trials

./: .gitignore  CODE_OF_CONDUCT.md  README.md  changelog.md  next-steps.md  prompts.md  pyproject.toml  releases.md  stats.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_change.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  chain_benchmark.py  concurrent_benchmark.py  latency_benchmark.py  report.py  throughput_benchmark.py
conformance/: README.md  __init__.py  conftest.py
conformance/adversarial/: __init__.py  test_authz_bypass.py  test_chain_tampering.py  test_malformed_inputs.py  test_phi_leakage.py  test_rate_limiting.py  test_replay_attacks.py
conformance/blackbox/: __init__.py  test_authz_conformance.py  test_cross_server_workflow.py  test_dicom_conformance.py  test_fhir_conformance.py  test_ledger_conformance.py  test_provenance_conformance.py
conformance/fixtures/: __init__.py  audit_records.py  authz_decisions.py  clinical_resources.py  provenance_records.py
conformance/harness/: __init__.py  client.py  config.py  data_seeder.py  runner.py
conformance/integration/: __init__.py  test_server_integration.py
conformance/interoperability/: __init__.py  test_cross_server_trace.py  test_schema_validation.py
conformance/negative/: __init__.py  test_invalid_inputs.py  test_unauthorized_access.py
conformance/positive/: __init__.py  test_clinical_read_conformance.py  test_core_conformance.py  test_imaging_conformance.py
conformance/security/: __init__.py  test_chain_integrity.py  test_ssrf_prevention.py  test_token_lifecycle.py
conformance/unit/: __init__.py  test_fixture_construction.py
deploy/: .env.example  docker-compose.multi-site.yml  docker-compose.yml
deploy/config/: authz.yaml  dicom.yaml  fhir.yaml  ledger.yaml  provenance.yaml  site-profile-example.yaml
deploy/docker/: Dockerfile.allinone  Dockerfile.authz  Dockerfile.dicom  Dockerfile.fhir  Dockerfile.ledger  Dockerfile.provenance
deploy/kubernetes/: configmap.yaml  deployment-authz.yaml  deployment-dicom.yaml  deployment-fhir.yaml  deployment-ledger.yaml  deployment-provenance.yaml  namespace.yaml
docs/: adoption-roadmap.md  architecture.md  glossary.md  index.html
docs/adr/: 001-mcp-protocol-boundary.md  002-five-server-architecture.md  003-twenty-three-tools.md  004-profile-conformance-levels.md  005-hash-chained-audit.md  006-dag-provenance.md  007-deny-by-default-rbac.md
docs/css/: style.css
docs/data/: safety.json  servers.json  topology.json
docs/governance/: compatibility-matrix.md  contribution-policy.md  decision-log.md  implementation-status.md  known-gaps.md  roadmap.md
docs/guides/: hospital-it.md  regulator-irb.md  robot-vendor.md  sponsor-cro.md  standards-community.md
docs/js/: conformance.js  diagrams.js
docs/mcp-process/: 01-robot-procedure-lifecycle.md  02-cross-site-mcp-communication.md  (+6 more)
docs/mcp-process-diagrams/: 03-clinical-system-integration.md  05-federated-learning-coordination.md  06-audit-provenance-chain.md  07-privacy-deidentification.md  README.md
examples/: __init__.py
governance/: CHARTER.md  CODEOWNERS  DECISION_PROCESS.md  EXTENSIONS.md  VERSION_COMPATIBILITY.md
integrations/: __init__.py
interop-testbed/: __init__.py  docker-compose.yml
main/: next-steps.md  stats.md
models/: __init__.py
paper/: National_MCP_Servers_for_Physical_AI_Oncology_Clinical_Trial_Systems.tex  arxiv.sty
peer-review/: 2026-03-06-openai-review-1.md  claude-2-2026-03-06.md  openai-2-2026-03-06.md  response-A-2026-03-06.md
profiles/: base-profile.md  clinical-read.md  country-us-fda.md  imaging-guided-oncology.md  multi-site-federated.md  robot-assisted-procedure.md  state-us-ca.md  state-us-ny.md
prompts/: README.md  prompt_a_current_claude_code.md  prompt_b_future_claude_code.md
regulatory/: CFR_PART_11.md  HIPAA.md  IRB_SITE_POLICY_TEMPLATE.md  US_FDA.md
safety/: __init__.py  approval_checkpoint.py  estop.py  gate_service.py  procedure_state.py  robot_registry.py  site_verifier.py  task_validator.py
schemas/: audit-record.schema.json  authz-decision.schema.json  capability-descriptor.schema.json  consent-status.schema.json  dicom-query.schema.json  error-response.schema.json  fhir-read.schema.json  fhir-search.schema.json  health-status.schema.json  provenance-record.schema.json  robot-capability-profile.schema.json  site-capability-profile.schema.json  task-order.schema.json
scripts/: generate_models.py
sdk/python/: pyproject.toml
sdk/python/examples/: auditor_example.py  cro_example.py  data_monitor_example.py  robot_agent_example.py  sponsor_example.py  trial_coordinator_example.py
sdk/python/trialmcp_client/: __init__.py  authz.py  client.py  config.py  dicom.py  exceptions.py  fhir.py  ledger.py  models.py  provenance.py
sdk/python/trialmcp_client/middleware/: __init__.py  audit_middleware.py  auth_middleware.py  circuit_breaker.py  retry_middleware.py
servers/: __init__.py
spec/: actor-model.md  audit.md  conformance.md  core.md  privacy.md  provenance.md  security.md  tool-contracts.md  versioning.md
tests/: test_conformance_runner.py  test_core_server.py  test_integrations.py  test_safety.py  test_schema_validator.py
tools/: __init__.py
(+184 files in other folders)
