[project]
name = "national-mcp-pai-oncology-trials"
version = "0.6.0"
description = "National MCP Standard for Physical AI Oncology Clinical Trials — Phase 1: Correctness, Contract Alignment, and Schema-Code Drift Resolution"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "jsonschema>=4.17",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["conformance", "models", "reference", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["conformance", "tests"]
markers = [
    "security: Security conformance tests",
    "interoperability: Interoperability conformance tests",
]
