[project]
name = "national-mcp-pai-oncology-trials"
version = "0.7.0"
description = "National MCP Standard for Physical AI Oncology Clinical Trials — Phase 2: Real Server Implementations, Persistence, and Deployment Infrastructure"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "jsonschema>=4.17",
]
fhir = []
dicom = []
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0",
    "jsonschema>=4.17",
]
docs = []
all = [
    "pytest>=7.0",
    "jsonschema>=4.17",
    "ruff>=0.1.0",
]

[project.scripts]
trialmcp-authz = "servers.trialmcp_authz.server:main"
trialmcp-fhir = "servers.trialmcp_fhir.server:main"
trialmcp-dicom = "servers.trialmcp_dicom.server:main"
trialmcp-ledger = "servers.trialmcp_ledger.server:main"
trialmcp-provenance = "servers.trialmcp_provenance.server:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["conformance", "examples", "models", "reference", "scripts", "servers", "tests"]

[tool.pytest.ini_options]
testpaths = ["conformance", "tests"]
markers = [
    "security: Security conformance tests",
    "interoperability: Interoperability conformance tests",
]
